Fix miscounted transport failure metrics
Closing one socket tears down its whole connection, which closes every
remaining socket, and each of those fired the counting listener. A
single failure was therefore reported as a failure of all six channel
types at once, and a deliberate disconnect looked identical to a hard
failure, leaving channel_close_by_type with no diagnostic value. The
counting and teardown listeners are now one listener that records the
close before closing the connection, so only the socket that caused the
teardown is counted and deliberate closes are not counted at all.

A socket carrying several channel types still counts against each of
them, since losing it affects all of them, so the total across types is
not the number of sockets closed. Say so on the field.

connect_failures missed sockets that fail to open, because that path
returns before any connect listener is registered. Unresolvable hosts
and exhausted file descriptors went uncounted.

connect_time_millis now starts its clock before the first socket is
opened rather than after, so it measures the whole open path, and the
field comments say what the latency covers and that the maximum is a
high watermark that is never reset.

A connect attempt rejected before it starts never records a start time,
so the failure log computed an elapsed time from zero, which is
meaningless and can be negative because nanoTime has no defined origin.
Report the duration only when an attempt actually ran.

Channel type keys are lowercased to match REST field conventions and
sorted so field order is stable whether the counters were collected
locally or read off the wire.

Co-authored-by: Cursor <cursoragent@cursor.com>
Signed-off-by: Janae Bacchus <jbacchus@uber.com>